; ModuleID = '/home/carl/AnghaBench/linux/net/ipv6/extr_xfrm6_tunnel.c_xfrm6_tunnel_spi_hash_byaddr.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv6/extr_xfrm6_tunnel.c_xfrm6_tunnel_spi_hash_byaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in6_addr = type { i32 }

@XFRM6_TUNNEL_SPI_BYADDR_HSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @xfrm6_tunnel_spi_hash_byaddr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xfrm6_tunnel_spi_hash_byaddr(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = bitcast i32* %4 to %struct.in6_addr*
  %6 = call i32 @ipv6_addr_hash(%struct.in6_addr* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = lshr i32 %7, 16
  %9 = load i32, i32* %3, align 4
  %10 = xor i32 %9, %8
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = lshr i32 %11, 8
  %13 = load i32, i32* %3, align 4
  %14 = xor i32 %13, %12
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* @XFRM6_TUNNEL_SPI_BYADDR_HSIZE, align 4
  %16 = sub nsw i32 %15, 1
  %17 = load i32, i32* %3, align 4
  %18 = and i32 %17, %16
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @ipv6_addr_hash(%struct.in6_addr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
